# meow

./: .env.example  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/skills/team-builder/: SKILL.md
.claude/skills/team-builder/references/: api_reference.md  composition-guide.md  team-templates.md
.claude/skills/team-builder/scripts/: discover_resources.py  example.py
docs/: ui-design-guide.md
docs/specs/: multi-yaml-collection-auth.md
e2e/: collection-tree.spec.ts  sidebar-resize.spec.ts  tab-management.spec.ts  visual-regression.spec.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  lib.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: cognito.rs  collection.rs  collection_env.rs  collection_variables.rs  environment.rs  github.rs  grpc.rs  mod.rs  openapi.rs  proto.rs  request.rs  rest.rs  shared.rs  workspace.rs
src-tauri/src/storage/: database.rs  mod.rs
src/components/: ApiReferencePanel.tsx  AuthEditor.tsx  CodeMirrorUrlBar.tsx  CognitoAuthForm.tsx  CollectionView.tsx  DocsViewer.tsx  EnvironmentManager.tsx  EnvironmentManagerDialog.tsx  GithubLoginDialog.tsx  KeyValueEditor.tsx  MethodBadge.tsx  RepoSelector.tsx  RequestEditor.tsx  RequestUrlBar.tsx  ResponseViewer.tsx  Sidebar.tsx  TabBar.tsx  TabCloseConfirmDialog.tsx  UnsavedChangesDialog.tsx  VariableHighlight.tsx  VariableSummaryBar.tsx  WorkspaceView.tsx
src/components/ui/: badge.tsx  command.tsx  dialog.tsx  input.tsx  resizable.tsx  scroll-area.tsx  select.tsx  tabs.tsx
src/lib/: tauri-mock.ts  tauri-window-mock.ts
src/routes/: index.tsx
src/store/: collectionStore.ts  environmentStore.ts  githubStore.ts  requestStore.ts  workspaceStore.ts
src/test/: resizable-layout.test.tsx  setup.ts
src/types/: openapi.ts
