[package]
name = "app"
version = "0.1.0"
description = "Meow - API Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
octocrab = "0.41"
serde_yaml = "0.9"
open = "5"
urlencoding = "2"
aes-gcm = "0.10.3"
# gRPC support
protox = "0.7"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
bytes = "1"
h2 = "0.4"
sha2 = "0.10"
tempfile = "3"
http = "1"
regex = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
webpki-roots = "0.26"
